syntax = "proto3";
option go_package = ".;providerpb";

package proto;

message InitReq {
  string client_id = 1;
  string client_secret = 2;
  string redirect_url = 3;
}

message GetTokenReq { string code = 1; }

message RefreshTokenReq { string refresh_token = 1; }

message ProviderResp { string name = 1; }

message NewAuthURLReq { string state = 1; }

message NewAuthURLResp { string url = 1; }

message GetUserInfoReq { string code = 1; }

message GetUserInfoResp {
  string username = 1;
  string provider_user_id = 2;
}

message Enpty {}

service Oauth2Plugin {
  rpc Init(InitReq) returns (Enpty) {}
  rpc Provider(Enpty) returns (ProviderResp) {}
  rpc NewAuthURL(NewAuthURLReq) returns (NewAuthURLResp) {}
  rpc GetUserInfo(GetUserInfoReq) returns (GetUserInfoResp) {}
}